--- a/2017_EuroScipy_geopandas/fiona-shapely_vs_geopandas.ipynb
+++ b/2017_EuroScipy_geopandas/fiona-shapely_vs_geopandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -13,11 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df = geopandas.read_file(\"stations-velib-disponibilites-en-temps-reel.geojson\")"
+    "df = geopandas.read_file(\"quartier_paris.geojson\")"
    ]
   },
   {
