update raw blocks

--- a/2017_EuroScipy_geopandas/geopandas_postgis_comparison.ipynb
+++ b/2017_EuroScipy_geopandas/geopandas_postgis_comparison.ipynb
@@ -15,18 +15,15 @@
     "\n",
     "**DISCLAIMER**: this is just a dummy comparison and no real performance benchmark, and I am not a PostGIS expert.\n",
     "\n",
-    "Data are loaded into postgresql database:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "Data are loaded into postgresql database:\n",
+    "\n",
+    "```\n",
     "shp2pgsql -s 26918 nyc_census_blocks.shp public.nyc_census_blocks | psql -h localhost -d postgres -U postgres\n",
     "shp2pgsql -s 26918 nyc_streets.shp public.nyc_streets | psql -h localhost -d postgres -U postgres\n",
     "shp2pgsql -s 26918 nyc_neighborhoods.shp public.nyc_neighborhoods | psql -h localhost -d postgres -U postgres\n",
     "shp2pgsql -s 26918 nyc_subway_stations.shp public.nyc_subway_stations | psql -h localhost -d postgres -U postgres\n",
-    "shp2pgsql -s 26918 nyc_homicides.shp public.nyc_homicides | psql -h localhost -d postgres -U postgres"
+    "shp2pgsql -s 26918 nyc_homicides.shp public.nyc_homicides | psql -h localhost -d postgres -U postgres\n",
+    "```"
    ]
   },
   {
@@ -71,13 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example from http://workshops.boundlessgeo.com/postgis-intro/spatial_relationships_exercises.html"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "Example from http://workshops.boundlessgeo.com/postgis-intro/spatial_relationships_exercises.html\n",
+    "\n",
+    "```sql\n",
     "-- Approximately how many people live on (within 50 meters of) Atlantic Commons?\n",
     "\n",
     "SELECT Sum(popn_total)\n",
@@ -86,26 +79,24 @@
     "   geom,\n",
     "   ST_GeomFromText('POINT(586782 4504202)', 26918),\n",
     "   50\n",
-    ");\n"
+    ");\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem with this example is that we don't have a 'dwithin' method in shapely/geopandas. Therefore I slightly adjusted this example (although this is slower in postgis, but more comparable to the geopandas version):"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "The problem with this example is that we don't have a 'dwithin' method in shapely/geopandas. Therefore I slightly adjusted this example (although this is slower in postgis, but more comparable to the geopandas version):\n",
+    "\n",
+    "```sql\n",
     "SELECT Sum(popn_total)\n",
     "FROM nyc_census_blocks\n",
     "WHERE ST_Distance(\n",
     "   geom,\n",
     "   ST_GeomFromText('POINT(586782 4504202)', 26918)) < 50\n",
-    ";"
+    ";\n",
+    "```"
    ]
   },
   {
@@ -274,14 +265,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```sql\n",
     "CREATE INDEX nyc_census_blocks_geom_gist ON nyc_census_blocks USING GIST (geom);\n",
-    "CREATE INDEX nyc_neighborhoods_geom_gist ON nyc_neighborhoods USING GIST (geom);"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "CREATE INDEX nyc_neighborhoods_geom_gist ON nyc_neighborhoods USING GIST (geom);\n",
+    "```\n",
+    "\n",
+    "```sql\n",
     "-- What is the population and racial make-up of the neighborhoods \n",
     "-- of Manhattan?\n",
     "SELECT\n",
@@ -293,7 +282,8 @@
     "JOIN nyc_census_blocks AS census\n",
     "ON ST_Intersects(neighborhoods.geom, census.geom)\n",
     "GROUP BY neighborhoods.name\n",
-    "ORDER BY white_pct DESC;"
+    "ORDER BY white_pct DESC;\n",
+    "```\n"
    ]
   },
   {
